export default {
  root: 'components/AuthForgotConfirm',
  form: {
    emailOrPhone: 'components/AuthForgotConfirm/Form/email',
    confirmationCode: 'components/AuthForgotConfirm/Form/confirmationCode',
    password: 'components/AuthForgotConfirm/Form/password',
    submitBtn: 'components/AuthForgotConfirm/Form/submit',
  },
}
