export default {
  tabNavigator: {
    profile: 'navigation/TabNavigator/ProfileTab',
  },
  authNavigator: {
    signUp: {
      phone: 'navigation/AuthNavigator/Signup/phone',
      email: 'navigation/AuthNavigator/Signup/email',
    },
    signIn: {
      phone: 'navigation/AuthNavigator/Signin/phone',
      email: 'navigation/AuthNavigator/Signin/email',
    },
    forgot: {
      phone: 'navigation/AuthNavigator/Forgot/phone',
      email: 'navigation/AuthNavigator/Forgot/email',
    },
  },
}
