export default {
  root: 'components/AuthSigninPhone',
  form: {
    phone: 'components/AuthSigninPhone/Form/phone',
    password: 'components/AuthSigninPhone/Form/password',
    submitBtn: 'components/AuthSigninPhone/Form/submit',
  },
}
