export default {
  root: 'components/AuthPhone',
  form: {
    phone: 'components/AuthPhone/Form/phone',
    submitBtn: 'components/AuthPhone/Form/submit',
  },
}
