export default {
  root: 'components/AuthEmail',
  header: {
    backBtn: 'components/AuthEmail/HeaderLeft',
  },
  form: {
    email: 'components/AuthEmail/Form/email',
    submitBtn: 'components/AuthEmail/Form/submit',
  },
}
