export default {
  root: 'components/AuthPassword',
  header: {
    backBtn: 'components/AuthPassword/HeaderLeft',
  },
  form: {
    password: 'components/AuthPassword/Form/password',
    submitBtn: 'components/AuthPassword/Form/submit',
  },
}
