export default {
  root: 'components/AuthEmailConfirm',
  header: {
    backBtn: 'components/AuthEmailConfirm/HeaderLeft',
  },
  form: {
    confirmationCode: 'components/AuthEmailConfirm/Form/confirmationCode',
    confirmButton: 'components/AuthEmailConfirm/Form/submit',
  },
}
