export default {
  root: 'components/AuthSigninEmail',
  resetPasswordBtn: 'components/AuthSigninEmail/BottomAction',
  form: {
    email: 'components/AuthSigninEmail/Form/email',
    password: 'components/AuthSigninEmail/Form/password',
    submitBtn: 'components/AuthSigninEmail/Form/submit',
  },
}
